- Technical infrastructure update - no changes