@@ -34,7 +34,7 @@ def main():
             typedef('DefaultValue', DefaultValue),
             typedef('MapValue', MapValue)
         ),
-        link_root='https://github.com/alcatrazEscapee/mcresources/blob/main',
+        link_root='https://github.com/TerraFirmaCraft/mcresources/blob/main',
         content_root='../wiki/',
         home_doc="""
     Wiki for `mcresources`, a resource generation library for Minecraft modding. This wiki is generated from the documentation in the mcresources repository
