@@ -108,90 +108,48 @@ def wall_multipart(wall_post: str, wall_side: str, wall_side_tall: str) -> Json:
     ]
 
 
-def door_blockstate(door_bottom: str, door_bottom_hinge: str, door_top: str, door_top_hinge: str) -> JsonObject:
+def door_blockstate(base: str) -> JsonObject:
+    left = base + '_bottom_left'
+    left_open = base + '_bottom_left_open'
+    right = base + '_bottom_right'
+    right_open = base + '_bottom_right_open'
+    top_left = base + '_top_left'
+    top_left_open = base + '_top_left_open'
+    top_right = base + '_top_right'
+    top_right_open = base + '_top_right_open'
     return {
-        'facing=east,half=lower,hinge=left,open=false': {'model': door_bottom},
-        'facing=south,half=lower,hinge=left,open=false': {'model': door_bottom, 'y': 90},
-        'facing=west,half=lower,hinge=left,open=false': {'model': door_bottom, 'y': 180},
-        'facing=north,half=lower,hinge=left,open=false': {'model': door_bottom, 'y': 270},
-        'facing=east,half=lower,hinge=right,open=false': {'model': door_bottom_hinge},
-        'facing=south,half=lower,hinge=right,open=false': {'model': door_bottom_hinge, 'y': 90},
-        'facing=west,half=lower,hinge=right,open=false': {'model': door_bottom_hinge, 'y': 180},
-        'facing=north,half=lower,hinge=right,open=false': {'model': door_bottom_hinge, 'y': 270},
-        'facing=east,half=lower,hinge=left,open=true': {'model': door_bottom_hinge, 'y': 90},
-        'facing=south,half=lower,hinge=left,open=true': {'model': door_bottom_hinge, 'y': 180},
-        'facing=west,half=lower,hinge=left,open=true': {'model': door_bottom_hinge, 'y': 270},
-        'facing=north,half=lower,hinge=left,open=true': {'model': door_bottom_hinge},
-        'facing=east,half=lower,hinge=right,open=true': {'model': door_bottom, 'y': 270},
-        'facing=south,half=lower,hinge=right,open=true': {'model': door_bottom},
-        'facing=west,half=lower,hinge=right,open=true': {'model': door_bottom, 'y': 90},
-        'facing=north,half=lower,hinge=right,open=true': {'model': door_bottom, 'y': 180},
-        'facing=east,half=upper,hinge=left,open=false': {'model': door_top},
-        'facing=south,half=upper,hinge=left,open=false': {'model': door_top, 'y': 90},
-        'facing=west,half=upper,hinge=left,open=false': {'model': door_top, 'y': 180},
-        'facing=north,half=upper,hinge=left,open=false': {'model': door_top, 'y': 270},
-        'facing=east,half=upper,hinge=right,open=false': {'model': door_top_hinge},
-        'facing=south,half=upper,hinge=right,open=false': {'model': door_top_hinge, 'y': 90},
-        'facing=west,half=upper,hinge=right,open=false': {'model': door_top_hinge, 'y': 180},
-        'facing=north,half=upper,hinge=right,open=false': {'model': door_top_hinge, 'y': 270},
-        'facing=east,half=upper,hinge=left,open=true': {'model': door_top_hinge, 'y': 90},
-        'facing=south,half=upper,hinge=left,open=true': {'model': door_top_hinge, 'y': 180},
-        'facing=west,half=upper,hinge=left,open=true': {'model': door_top_hinge, 'y': 270},
-        'facing=north,half=upper,hinge=left,open=true': {'model': door_top_hinge},
-        'facing=east,half=upper,hinge=right,open=true': {'model': door_top, 'y': 270},
-        'facing=south,half=upper,hinge=right,open=true': {'model': door_top},
-        'facing=west,half=upper,hinge=right,open=true': {'model': door_top, 'y': 90},
-        'facing=north,half=upper,hinge=right,open=true': {'model': door_top, 'y': 180}
-    }
-
-
-def trapdoor_blockstate(trapdoor_bottom: str, trapdoor_top: str, trapdoor_open: str) -> JsonObject:
-    return {
-        'facing=north,half=bottom,open=false': {'model': trapdoor_bottom},
-        'facing=south,half=bottom,open=false': {'model': trapdoor_bottom, 'y': 180},
-        'facing=east,half=bottom,open=false': {'model': trapdoor_bottom, 'y': 90},
-        'facing=west,half=bottom,open=false': {'model': trapdoor_bottom, 'y': 270},
-        'facing=north,half=top,open=false': {'model': trapdoor_top},
-        'facing=south,half=top,open=false': {'model': trapdoor_top, 'y': 180},
-        'facing=east,half=top,open=false': {'model': trapdoor_top, 'y': 90},
-        'facing=west,half=top,open=false': {'model': trapdoor_top, 'y': 270},
-        'facing=north,half=bottom,open=true': {'model': trapdoor_open},
-        'facing=south,half=bottom,open=true': {'model': trapdoor_open, 'y': 180},
-        'facing=east,half=bottom,open=true': {'model': trapdoor_open, 'y': 90},
-        'facing=west,half=bottom,open=true': {'model': trapdoor_open, 'y': 270},
-        'facing=north,half=top,open=true': {'model': trapdoor_open, 'x': 180, 'y': 180},
-        'facing=south,half=top,open=true': {'model': trapdoor_open, 'x': 180, 'y': 0},
-        'facing=east,half=top,open=true': {'model': trapdoor_open, 'x': 180, 'y': 270},
-        'facing=west,half=top,open=true': {'model': trapdoor_open, 'x': 180, 'y': 90}
-    }
-
-
-def button_blockstate(button: str, pressed: str) -> JsonObject:
-    return {
-        'face=floor,facing=east,powered=false': {'model': button, 'y': 90},
-        'face=floor,facing=west,powered=false': {'model': button, 'y': 270},
-        'face=floor,facing=south,powered=false': {'model': button, 'y': 180},
-        'face=floor,facing=north,powered=false': {'model': button},
-        'face=wall,facing=east,powered=false': {'model': button, 'uvlock': True, 'x': 90, 'y': 90},
-        'face=wall,facing=west,powered=false': {'model': button, 'uvlock': True, 'x': 90, 'y': 270},
-        'face=wall,facing=south,powered=false': {'model': button, 'uvlock': True, 'x': 90, 'y': 180},
-        'face=wall,facing=north,powered=false': {'model': button, 'uvlock': True, 'x': 90},
-        'face=ceiling,facing=east,powered=false': {'model': button, 'x': 180, 'y': 270},
-        'face=ceiling,facing=west,powered=false': {'model': button, 'x': 180, 'y': 90},
-        'face=ceiling,facing=south,powered=false': {'model': button, 'x': 180},
-        'face=ceiling,facing=north,powered=false': {'model': button, 'x': 180, 'y': 180},
-        'face=floor,facing=east,powered=true': {'model': pressed, 'y': 90},
-        'face=floor,facing=west,powered=true': {'model': pressed, 'y': 270},
-        'face=floor,facing=south,powered=true': {'model': pressed, 'y': 180},
-        'face=floor,facing=north,powered=true': {'model': pressed},
-        'face=wall,facing=east,powered=true': {'model': pressed, 'uvlock': True, 'x': 90, 'y': 90},
-        'face=wall,facing=west,powered=true': {'model': pressed, 'uvlock': True, 'x': 90, 'y': 270},
-        'face=wall,facing=south,powered=true': {'model': pressed, 'uvlock': True, 'x': 90, 'y': 180},
-        'face=wall,facing=north,powered=true': {'model': pressed, 'uvlock': True, 'x': 90},
-        'face=ceiling,facing=east,powered=true': {'model': pressed, 'x': 180, 'y': 270},
-        'face=ceiling,facing=west,powered=true': {'model': pressed, 'x': 180, 'y': 90},
-        'face=ceiling,facing=south,powered=true': {'model': pressed, 'x': 180},
-        'face=ceiling,facing=north,powered=true': {'model': pressed, 'x': 180, 'y': 180}
+        'facing=east,half=lower,hinge=left,open=false': {'model': left},
+        'facing=east,half=lower,hinge=left,open=true': {'model': left_open, 'y': 90},
+        'facing=east,half=lower,hinge=right,open=false': {'model': right},
+        'facing=east,half=lower,hinge=right,open=true': {'model': right_open, 'y': 270},
+        'facing=east,half=upper,hinge=left,open=false': {'model': top_left},
+        'facing=east,half=upper,hinge=left,open=true': {'model': top_left_open, 'y': 90},
+        'facing=east,half=upper,hinge=right,open=false': {'model': top_right},
+        'facing=east,half=upper,hinge=right,open=true': {'model': top_right_open, 'y': 270},
+        'facing=north,half=lower,hinge=left,open=false': {'model': left, 'y': 270},
+        'facing=north,half=lower,hinge=left,open=true': {'model': left_open},
+        'facing=north,half=lower,hinge=right,open=false': {'model': right, 'y': 270},
+        'facing=north,half=lower,hinge=right,open=true': {'model': right_open, 'y': 180},
+        'facing=north,half=upper,hinge=left,open=false': {'model': top_left, 'y': 270},
+        'facing=north,half=upper,hinge=left,open=true': {'model': top_left_open},
+        'facing=north,half=upper,hinge=right,open=false': {'model': top_right, 'y': 270},
+        'facing=north,half=upper,hinge=right,open=true': {'model': top_right_open, 'y': 180},
+        'facing=south,half=lower,hinge=left,open=false': {'model': left, 'y': 90},
+        'facing=south,half=lower,hinge=left,open=true': {'model': left_open, 'y': 180},
+        'facing=south,half=lower,hinge=right,open=false': {'model': right, 'y': 90},
+        'facing=south,half=lower,hinge=right,open=true': {'model': right_open},
+        'facing=south,half=upper,hinge=left,open=false': {'model': top_left, 'y': 90},
+        'facing=south,half=upper,hinge=left,open=true': {'model': top_left_open, 'y': 180},
+        'facing=south,half=upper,hinge=right,open=false': {'model': top_right, 'y': 90},
+        'facing=south,half=upper,hinge=right,open=true': {'model': top_right_open},
+        'facing=west,half=lower,hinge=left,open=false': {'model': left, 'y': 180},
+        'facing=west,half=lower,hinge=left,open=true': {'model': left_open, 'y': 270},
+        'facing=west,half=lower,hinge=right,open=false': {'model': right, 'y': 180},
+        'facing=west,half=lower,hinge=right,open=true': {'model': right_open, 'y': 90},
+        'facing=west,half=upper,hinge=left,open=false': {'model': top_left, 'y': 180},
+        'facing=west,half=upper,hinge=left,open=true': {'model': top_left_open, 'y': 270},
+        'facing=west,half=upper,hinge=right,open=false': {'model': top_right, 'y': 180},
+        'facing=west,half=upper,hinge=right,open=true': {'model': top_right_open, 'y': 90}
     }
 
 
