@@ -16,10 +16,10 @@ setuptools.setup(
     description='A Python Data Generator for Minecraft Modding',
     long_description=long_description,
     long_description_content_type='text/markdown',
-    author='AlcatrazEscapee',
-    author_email='ellie@molleroneill.com',
-    url='https://github.com/alcatrazEscapee/mcresources',
-    keywords=['python', 'minecraft', 'resources', 'modding', 'forge'],
+    author='EERussianguy',
+    author_email='eerussianguy@gmail.com',
+    url='https://github.com/TerraFirmaCraft/mcresources',
+    keywords=['python', 'minecraft', 'resources', 'modding', 'forge', 'neoforge'],
     install_requires=[],
     package_data={"pixelmatch": ["py.typed"]},
     classifiers=[
